<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="initial_score">0</string>
    <string name="team1_header">Team 1</string>
    <string name="team2_header">Team 2</string>

    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>