<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.scorekeeper.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/decreaseTeam1"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/minus_button"
            android:onClick="decreaseScore"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/purple_200"/>

        <TextView
            android:id="@+id/score_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/initial_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <ImageButton
            android:id="@+id/increaseTeam1"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/plus_button"
            android:onClick="increaseScore"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/purple_200"/>

        <TextView
            android:id="@+id/team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team1_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/decreaseTeam2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/minus_button"
            android:onClick="decreaseScore"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/purple_200"/>

        <TextView
            android:id="@+id/score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/initial_score"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <ImageButton
            android:id="@+id/increaseTeam2"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/plus_button"
            android:onClick="increaseScore"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/purple_200" />

        <TextView
            android:id="@+id/team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="158dp"
            android:layout_marginBottom="0dp"
            android:text="@string/team2_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </RelativeLayout>

</LinearLayout>